feature 补充了webhook的方式

--- a/xxl-job-admin/src/main/resources/i18n/message_zh_TC.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_zh_TC.properties
@@ -118,7 +118,13 @@ jobinfo_field_gluetype=運行模式
 jobinfo_field_executorparam=任務參數
 jobinfo_field_author=負責人
 jobinfo_field_timeout=任務超時秒數
-jobinfo_field_alarmemail=告警郵件
+jobinfo_field_alarmUrl=告警地址
+jobinfo_field_alarmType=告警類型
+jobinfo_field_email=郵件
+jobinfo_field_webhook=webhook
+jobinfo_field_entwechat=企業微信
+jobinfo_field_feishu=飛書
+jobinfo_field_dingding=釘釘
 jobinfo_field_alarmemail_placeholder=輸入多個告警郵件地址，請以逗號分隔
 jobinfo_field_executorRouteStrategy=路由策略
 jobinfo_field_childJobId=子任務ID
